package org.arvinw.example13_3;

public class CircleRuler implements Ruler{
    @Override
    public void regularize() {
        System.out.println("⚪");
    }
}
