package org.arvinw.example13_3;

public class OtherRuler implements Ruler{
    @Override
    public void regularize() {
        System.out.println("其他形状");
    }
}
