package org.arvinw.example13_3;

public interface Ruler {
    public void regularize();
}
