package org.arvinw.example13_3;

public class SquareRuler implements Ruler{

    @Override
    public void regularize() {
        System.out.println("口");
    }
}
