package org.arvinw.example13_3;

public class TriangleRuler implements Ruler{
    @Override
    public void regularize() {
        System.out.println("▲");
    }
}
